@@ -32,6 +32,8 @@
           (http://www.packetfence.org/mantis/view.php?id=392)
         Removed db connection parameters from switches.conf
           (http://www.packetfence.org/mantis/view.php?id=391)
+        Removed DBI connect in pfsetvlan
+          (http://www.packetfence.org/mantis/view.php?id=393)
 
 
 1.7.3
